--- a/src/app/auth/auth.component.html
+++ b/src/app/auth/auth.component.html
@@ -1,1 +1,8 @@
-<p>auth works!</p>
+<main class="container">
+    <p-card class="card">
+        <h1 class="loginTitle">Iniciar sesión</h1>
+        <p-divider></p-divider>
+        <app-login-form></app-login-form>
+    </p-card>
+    
+</main>
