--- a/src/styles.css
+++ b/src/styles.css
@@ -1,1 +1,27 @@
 /* You can add global styles to this file, and also import other style files */
+@import "primeng/resources/themes/lara-light-blue/theme.css";
+@import "primeng/resources/primeng.css";
+@import "primeicons/primeicons.css";
+
+body {
+    margin: 0;
+    margin-top: 0;
+    padding: 0;
+}
+html {
+    margin: 0;
+    padding: 0;
+}
+
+.layout{
+    display: grid;
+    grid-template-columns: repeat(6, 1fr);
+    gap: 0px;
+    grid-auto-rows: minmax(100px, auto);
+    height: 100vh;
+}
+
+.sidegrid{
+    grid-column: 1;
+    grid-row: 1;
+}
